swagger securitydefinition
