# docs/swagger.json
@@ -8,6 +8,11 @@
     "paths": {
         "/v1/auth/check": {
             "get": {
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -30,6 +35,7 @@
         },
         "/v1/auth/signin": {
             "put": {
+                "description": "Sets cookie \"sessionId\" on response",
                 "consumes": [
                     "application/json"
                 ],
@@ -60,6 +66,11 @@
         },
         "/v1/auth/signout": {
             "put": {
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -109,6 +120,11 @@
         },
         "/v1/channels": {
             "get": {
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -132,6 +148,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -165,6 +186,11 @@
         },
         "/v1/channels/{id}": {
             "put": {
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -200,6 +226,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -371,6 +402,13 @@
                 "EmailChannel",
                 "WebhookChannel"
             ]
+        }
+    },
+    "securityDefinitions": {
+        "cookieAuth": {
+            "type": "apiKey",
+            "name": "sessionId",
+            "in": "cookie"
         }
     }
 }
